pkg/gox/testdata/errors/unclosed.gox
package demo

func View() any {
	return <main><p>Broken</p>
}
